--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -1079,3 +1079,53 @@ td:not(:first-child) .sMainInfo__line{
 	}
 }
 
+.entrance-chess-info-page {
+	background-color: #fff;
+	main {
+		padding-bottom: rem(24);
+		padding-top: rem(12);
+		@include media-breakpoint-up(md) {
+			padding-bottom: rem(84);
+			padding-top: rem(64);
+			margin-left: rem(72);
+		}
+	}
+	.sObjectDetails {
+		margin-bottom: rem(26);
+		@include media-breakpoint-up(md) {
+			margin-bottom: 0;
+		}
+		.details-with-toggle__wrap {
+			background-color: #fff;
+		}
+	}
+	.sMainInfo {
+		h4 {
+			font-family: 'AkzidenzGroteskProExtended';
+			margin-bottom: rem(18);
+			padding: 0 rem(12);
+			@include media-breakpoint-up(md) {
+				margin-bottom: rem(24);
+				padding: 0;
+			}
+		}
+	}
+	.main-table {
+		margin-bottom: rem(24);
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(48);
+		}
+		table>tbody>tr:not(.inner-level,:first-child)>td {
+			border-bottom: none;
+		}
+		&--2 {
+			margin-bottom: 0;
+			@include media-breakpoint-up(md) {
+				margin-bottom: 0;
+			}
+			table>tbody>tr:not(.inner-level,:first-child)>td {
+				border-bottom: 1px solid $gray-200;
+			}
+		}
+	}
+}
