--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -39,6 +39,10 @@
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
 }
+.icon-chevron-left {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-chevron-right {
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
