--- a/sourse/pug/pages/03-task-d.pug
+++ b/sourse/pug/pages/03-task-d.pug
@@ -14,7 +14,7 @@ block variables
 	- let  bg= '01-3-house.jpg'
 
 block title
-	- let  title= 'Кухня'
+	- let  title= 'Задачи'
 	title= title
 block pagecontent
 	//- +mob-mnu()
@@ -22,7 +22,7 @@ block pagecontent
 	main
 		+page-head({
 			items: ['Задачи'],
-			t: 'Кухня',
+			t: 'Задачи',
 			sample: false,
 			strength: "323"
 		})
