--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -337,7 +337,8 @@
 		line-height: 1.2;
 		text-transform: uppercase;
 		font-family: "AkzidenzGroteskProExtended";
-
+		flex-wrap: wrap;
+    justify-content: center;
 		.badge {
 			@include text-14;
 			// margin-left: rem(6);
@@ -918,6 +919,7 @@
 		height: rem(6);
 		margin-top: rem(6);
 		line-height: 0.25;
+		// background-color: $body-bg;
 		@include media-breakpoint-up(md) {
 			height: rem(12);
 		}
@@ -934,9 +936,11 @@
 		&:after {
 			width: 100%;
 			opacity: 0.36;
+			z-index: 10;
 		}
 		&:before {
 			width: var(--w);
+			z-index: 100;
 		}
 	}
 	&.disabled {
