--- a/sourse/pug/blocks/sMainInfo/_sMainInfo.scss
+++ b/sourse/pug/blocks/sMainInfo/_sMainInfo.scss
@@ -55,14 +55,16 @@
     }
   }
   &__col {
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
       max-width: calc(rem(288) + var(--bs-gutter-x));
     }
   }
-  &__chess-table-wrap {
-    background: #fff;
+  &__table-wrap {
     overflow-x: auto;
     overflow-y: hidden;
+  }
+  &__chess-table-wrap {
+    background: #fff;
     @include media-breakpoint-up(md) {
       padding: 0 rem(48) rem(48);
     }
@@ -151,7 +153,7 @@
       }
     }
     &.accent {
-      border: none;
+      border: none !important;
       background-color: $accent;
       .sMainInfo__precent {
         color: #000;
