--- a/sourse/pug/pages/04-edit-team.pug
+++ b/sourse/pug/pages/04-edit-team.pug
@@ -38,21 +38,22 @@ block pagecontent
 								+e.title-col.col-md-auto Наименование работ
 								.col-md
 									ul
-										li: +in-c('checkbox', 'Шпатлевка стен', 'surface')
-										li: +in-c('checkbox', 'Штукатурка стен', 'surface')
-										li: +in-c('checkbox', 'Заливка пола', 'surface')
-										li: +in-c('checkbox', 'Натяжка потолка', 'surface')
-										li: +in-c('checkbox', 'Шпатлевка стен', 'surface')
-										li: +in-c('checkbox', 'Штукатурка стен', 'surface')
-										li: +in-c('checkbox', 'Заливка пола', 'surface')
-										li: +in-c('checkbox', 'Натяжка потолка', 'surface')
-										li: +in-c('checkbox', 'Шпатлевка стен', 'surface')
-										li: +in-c('checkbox', 'Штукатурка стен', 'surface')
+										li: +in-c('checkbox', 'Шпатлевка стен', 'work')
+										li: +in-c('checkbox', 'Штукатурка стен', 'work')
+										li: +in-c('checkbox', 'Заливка пола', 'work')
+										li: +in-c('checkbox', 'Натяжка потолка', 'work')
+										li: +in-c('checkbox', 'Шпатлевка стен', 'work')
+										li: +in-c('checkbox', 'Штукатурка стен', 'work')
+										li: +in-c('checkbox', 'Заливка пола', 'work')
+										li: +in-c('checkbox', 'Натяжка потолка', 'work')
+										li: +in-c('checkbox', 'Шпатлевка стен', 'work')
+										li: +in-c('checkbox', 'Штукатурка стен', 'work')
 					.col-12
 						+e.wrap
 							h4 Работники
 							.row
-								+e.title-col.col-md-auto Работник 1
+								+e.title-col.col-md-auto 
+									+e.title Работник 1
 								.col-md
 									+e.worker-wrap
 										+e.input-wrap.form-group
@@ -65,8 +66,9 @@ block pagecontent
 												+e.SPAN.input-title Телефон
 							.row
 								+e.title-col.col-md-auto 
-									| Работник 2
-									+e.delete(href='#'): +icon('delete')
+									+e.title 
+										| Работник 2
+										+e.delete(href='#'): +icon('delete')
 								.col-md
 									+e.worker-wrap
 										+e.input-wrap.form-group
