--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -24,7 +24,7 @@ mixin modal()
 				.col-6: +in-c('checkbox', 'Задачи', 'dublicate')
 			.row
 				.col-md: +e.btn.btn.btn-accent(href='#') Отмена
-				.col-md: +e.btn.btn.btn-light(href='#') Удалить
+				.col-md: +e.btn.btn.btn-light(href='#') Подтвердить
 
 	// #modal-dublicate
 	
