--- a/sourse/pug/pages/01-entrance-chess-d.pug
+++ b/sourse/pug/pages/01-entrance-chess-d.pug
@@ -102,185 +102,175 @@ block pagecontent
 							+e.reset(href='#') Сбросить
 			+e.chess-table-wrap
 				+e.table-wrap
-					table
-						mixin td(text=[], precent, colspan)
-							if colspan
-								td(colspan=colspan)
-									+e.cell&attributes(attributes)
-										p
-											!= text[0]
-											| 
-											span!=  text[1]
-										+e.precent!= precent 
-							else
-								td
-									+e.cell&attributes(attributes)
-										p
-											!= text[0]
-											| 
-											span!=  text[1]
-										+e.precent!= precent 
-						tbody
-							tr
-								+td(['Этаж', '№12'], '15%')
-								+td(['Квартира', '№127'], '67%')
-								+td(['Квартира', '№128'], '67%')
-								+td(['Квартира', '№129'], '67%')
-								+td(['Квартира', '№130'], '67%')
-								+td(['Квартира', '№131'], '67%')
-								+td(['Квартира', '№132'], '67%').accent
-								+td(['Квартира', '№133'], '67%')
-								+td(['Квартира', '№134'], '67%')
-								+td(['Квартира', '№135'], '67%')
-								+td(['Квартира', '№136'], '67%')
-								+td(['Квартира', '№137'], '67%')
-								+td(['Квартира', '№138'], '67%')
-							tr
-								+td(['Этаж', '№11'], '13%')
-								+td(['Квартира', '№115'], '67%')
-								+td(['Квартира', '№116'], '67%')
-								+td(['Квартира', '№117'], '67%')
-								+td(['Квартира', '№118'], '67%')
-								+td(['Квартира', '№119'], '67%')
-								+td(['Квартира', '№120'], '67%')
-								+td(['Квартира', '№121'], '67%')
-								+td(['Квартира', '№122'], '67%')
-								+td(['Квартира', '№123'], '67%')
-								+td(['Квартира', '№124'], '67%')
-								+td(['Квартира', '№125'], '67%')
-								+td(['Квартира', '№126'], '67%')
-							tr
-								+td(['Этаж', '№10'], '25%').focus
-								+td(['Квартира', '№103'], '67%')
-								+td(['Квартира', '№104'], '67%')
-								+td(['Квартира', '№105'], '67%')
-								+td(['Квартира', '№106'], '67%')
-								+td(['Квартира', '№107'], '67%')
-								+td(['Квартира', '№108'], '67%')
-								+td(['Квартира', '№109'], '67%')
-								+td(['Квартира', '№110'], '100%').done
-								+td(['Квартира', '№111'], '67%')
-								+td(['Квартира', '№112'], '67%')
-								+td(['Квартира', '№113'], '67%')
-								+td(['Квартира', '№114'], '67%')
-							tr
-								+td(['Этаж', '№9'], '28%')
-								+td(['Квартира', '№91'], '67%')
-								+td(['Квартира', '№92'], '67%')
-								+td(['Квартира', '№93'], '67%')
-								+td(['Квартира', '№94'], '13%').danger
-								+td(['Квартира', '№95'], '67%')
-								+td(['Квартира', '№96'], '67%')
-								+td(['Квартира', '№97'], '67%')
-								+td(['Квартира', '№98'], '67%')
-								+td(['Квартира', '№99'], '67%')
-								+td(['Квартира', '№100'], '67%')
-								+td(['Квартира', '№101'], '67%')
-								+td(['Квартира', '№102'], '67%')
-							tr
-								+td(['Этаж', '№8'], '3%')
-								+td(['Квартира', '№79'], '67%')
-								+td(['Квартира', '№80'], '67%')
-								+td(['Квартира', '№81'], '67%')
-								+td(['Квартира', '№82'], '67%')
-								+td(['Квартира', '№83'], '67%')
-								+td(['Квартира', '№84'], '67%')
-								+td(['Квартира', '№85'], '67%')
-								+td(['Квартира', '№86'], '100%').done
-								+td(['Квартира', '№87'], '67%')
-								+td(['Квартира', '№88'], '67%')
-								+td(['Квартира', '№89'], '67%')
-								+td(['Квартира', '№90'], '67%')
-							tr
-								+td(['Этаж', '№7'], '67%')
-								+td(['Квартира', '№67'], '67%')
-								+td(['Квартира', '№68'], '67%')
-								+td(['Квартира', '№69'], '67%')
-								+td(['Квартира', '№70'], '67%')
-								+td(['Квартира', '№71'], '67%')
-								+td(['Квартира', '№72'], '67%')
-								+td(['Квартира', '№73'], '67%')
-								+td(['Квартира', '№74'], '67%')
-								+td(['Квартира', '№75'], '67%')
-								+td(['Квартира', '№76'], '67%')
-								+td(['Квартира', '№77'], '67%')
-								+td(['Квартира', '№78'], '67%')
-							tr
-								+td(['Этаж', '№6'], '18%')
-								+td(['Квартира', '№55'], '67%')
-								+td(['Квартира', '№56'], '67%')
-								+td(['Квартира', '№57'], '67%')
-								+td(['Квартира', '№58'], '67%')
-								+td(['Квартира', '№59'], '67%')
-								+td(['Квартира', '№60'], '67%')
-								+td(['Квартира', '№61'], '67%')
-								+td(['Квартира', '№62'], '67%')
-								+td(['Квартира', '№63'], '67%')
-								+td(['Квартира', '№64'], '100%').done
-								+td(['Квартира', '№65'], '100%').done
-								+td(['Квартира', '№66'], '67%')
-							tr
-								+td(['Этаж', '№5'], '0%')
-								+td(['Квартира', '№43'], '67%')
-								+td(['Квартира', '№44'], '67%')
-								+td(['Квартира', '№45'], '67%')
-								+td(['Квартира', '№46'], '67%')
-								+td(['Квартира', '№47'], '67%')
-								+td(['Квартира', '№48'], '67%')
-								+td(['Квартира', '№49'], '67%')
-								+td(['Квартира', '№50'], '67%')
-								+td(['Квартира', '№51'], '67%')
-								+td(['Квартира', '№52'], '67%')
-								+td(['Квартира', '№53'], '67%')
-								+td(['Квартира', '№54'], '67%')
-							tr
-								+td(['Этаж', '№4'], '67%')
-								+td(['Квартира', '№31'], '67%')
-								+td(['Квартира', '№32'], '67%')
-								+td(['Квартира', '№33'], '67%')
-								+td(['Квартира', '№34'], '67%')
-								+td(['Квартира', '№35'], '67%')
-								+td(['Квартира', '№36'], '67%')
-								+td(['Квартира', '№37'], '67%')
-								+td(['Квартира', '№38'], '67%')
-								+td(['Квартира', '№39'], '67%')
-								+td(['Квартира', '№40'], '67%')
-								+td(['Квартира', '№41'], '67%')
-								+td(['Квартира', '№42'], '67%')
-							tr
-								+td(['Этаж', '№3'], '29%')
-								+td(['Квартира', '№19'], '67%')
-								+td(['Квартира', '№20'], '67%')
-								+td(['Квартира', '№21'], '67%')
-								+td(['Квартира', '№22'], '67%')
-								+td(['Квартира', '№23'], '67%')
-								+td(['Квартира', '№24'], '67%')
-								+td(['Квартира', '№25'], '67%')
-								+td(['Квартира', '№26'], '67%')
-								+td(['Квартира', '№27'], '67%')
-								+td(['Квартира', '№28'], '67%')
-								+td(['Квартира', '№29'], '67%')
-								+td(['Квартира', '№30'], '67%')
-							tr
-								+td(['Этаж', '№2'], '67%')
-								+td(['Квартира', '№7'], '67%')
-								+td(['Квартира', '№8'], '67%')
-								+td(['Квартира', '№9'], '67%')
-								+td(['Квартира', '№10'], '67%')
-								+td(['Квартира', '№11'], '67%')
-								+td(['Квартира', '№12'], '67%')
-								+td(['Квартира', '№13'], '67%')
-								+td(['Квартира', '№14'], '67%')
-								+td(['Квартира', '№15'], '67%')
-								+td(['Квартира', '№16'], '67%')
-								+td(['Квартира', '№17'], '67%')
-								+td(['Квартира', '№18'], '67%')
-							tr
-								+td(['Этаж', '№1'], '15%')
-								+td(['Квартира', '№1'], '67%', 2)
-								+td(['Квартира', '№2'], '67%', 2)
-								+td(['Квартира', '№3'], '67%', 2)
-								+td(['Квартира', '№4'], '67%', 2)
-								+td(['Квартира', '№5'], '67%', 2)
-								+td(['Квартира', '№6'], '67%', 2)
+					+e.table-wrap-inner
+						mixin td(text=[], precent)
+							li
+								+e.cell(href='#')&attributes(attributes)
+									p
+										!= text[0]
+										| 
+										span!=  text[1]
+									+e.precent!= precent 
+						ul
+							+td(['Этаж', '№12'], '15%')
+							+td(['Квартира', '№127'], '67%')
+							+td(['Квартира', '№128'], '67%')
+							+td(['Квартира', '№129'], '67%')
+							+td(['Квартира', '№130'], '67%')
+							+td(['Квартира', '№131'], '67%')
+							+td(['Квартира', '№132'], '67%')
+							+td(['Квартира', '№133'], '67%')
+							+td(['Квартира', '№134'], '67%')
+							+td(['Квартира', '№135'], '67%')
+							+td(['Квартира', '№136'], '67%')
+							+td(['Квартира', '№137'], '67%')
+							+td(['Квартира', '№138'], '67%')
+						ul
+							+td(['Этаж', '№11'], '13%')
+							+td(['Квартира', '№115'], '67%')
+							+td(['Квартира', '№116'], '67%')
+							+td(['Квартира', '№117'], '67%')
+							+td(['Квартира', '№118'], '67%')
+							+td(['Квартира', '№119'], '67%')
+							+td(['Квартира', '№120'], '67%')
+							+td(['Квартира', '№121'], '67%')
+							+td(['Квартира', '№122'], '67%')
+							+td(['Квартира', '№123'], '67%')
+							+td(['Квартира', '№124'], '67%')
+							+td(['Квартира', '№125'], '67%')
+							+td(['Квартира', '№126'], '67%')
+						ul
+							+td(['Этаж', '№10'], '25%')
+							+td(['Квартира', '№103'], '67%')
+							+td(['Квартира', '№104'], '67%')
+							+td(['Квартира', '№105'], '67%')
+							+td(['Квартира', '№106'], '67%')
+							+td(['Квартира', '№107'], '67%')
+							+td(['Квартира', '№108'], '67%')
+							+td(['Квартира', '№109'], '67%')
+							+td(['Квартира', '№110'], '100%').done
+							+td(['Квартира', '№111'], '67%')
+							+td(['Квартира', '№112'], '67%')
+							+td(['Квартира', '№113'], '67%')
+							+td(['Квартира', '№114'], '67%')
+						ul
+							+td(['Этаж', '№9'], '28%')
+							+td(['Квартира', '№91'], '67%')
+							+td(['Квартира', '№92'], '67%')
+							+td(['Квартира', '№93'], '67%')
+							+td(['Квартира', '№94'], '13%').danger
+							+td(['Квартира', '№95'], '67%')
+							+td(['Квартира', '№96'], '67%')
+							+td(['Квартира', '№97'], '67%')
+							+td(['Квартира', '№98'], '67%')
+							+td(['Квартира', '№99'], '67%')
+							+td(['Квартира', '№100'], '67%')
+							+td(['Квартира', '№101'], '67%')
+							+td(['Квартира', '№102'], '67%')
+						ul
+							+td(['Этаж', '№8'], '3%')
+							+td(['Квартира', '№79'], '67%')
+							+td(['Квартира', '№80'], '67%')
+							+td(['Квартира', '№81'], '67%')
+							+td(['Квартира', '№82'], '67%')
+							+td(['Квартира', '№83'], '67%')
+							+td(['Квартира', '№84'], '67%')
+							+td(['Квартира', '№85'], '67%')
+							+td(['Квартира', '№86'], '100%').done
+							+td(['Квартира', '№87'], '67%')
+							+td(['Квартира', '№88'], '67%')
+							+td(['Квартира', '№89'], '67%')
+							+td(['Квартира', '№90'], '67%')
+						ul
+							+td(['Этаж', '№7'], '67%')
+							+td(['Квартира', '№67'], '67%')
+							+td(['Квартира', '№68'], '67%')
+							+td(['Квартира', '№69'], '67%')
+							+td(['Квартира', '№70'], '67%')
+							+td(['Квартира', '№71'], '67%')
+							+td(['Квартира', '№72'], '67%')
+							+td(['Квартира', '№73'], '67%')
+							+td(['Квартира', '№74'], '67%')
+							+td(['Квартира', '№75'], '67%')
+							+td(['Квартира', '№76'], '67%')
+							+td(['Квартира', '№77'], '67%')
+							+td(['Квартира', '№78'], '67%')
+						ul
+							+td(['Этаж', '№6'], '18%')
+							+td(['Квартира', '№55'], '67%')
+							+td(['Квартира', '№56'], '67%')
+							+td(['Квартира', '№57'], '67%')
+							+td(['Квартира', '№58'], '67%')
+							+td(['Квартира', '№59'], '67%')
+							+td(['Квартира', '№60'], '67%')
+							+td(['Квартира', '№61'], '67%')
+							+td(['Квартира', '№62'], '67%')
+							+td(['Квартира', '№63'], '67%')
+							+td(['Квартира', '№64'], '100%').done
+							+td(['Квартира', '№65'], '100%').done
+							+td(['Квартира', '№66'], '67%')
+						ul
+							+td(['Этаж', '№5'], '0%')
+							+td(['Квартира', '№43'], '67%')
+							+td(['Квартира', '№44'], '67%')
+							+td(['Квартира', '№45'], '67%')
+							+td(['Квартира', '№46'], '67%')
+							+td(['Квартира', '№47'], '67%')
+							+td(['Квартира', '№48'], '67%')
+							+td(['Квартира', '№49'], '67%')
+							+td(['Квартира', '№50'], '67%')
+							+td(['Квартира', '№51'], '67%')
+							+td(['Квартира', '№52'], '67%')
+							+td(['Квартира', '№53'], '67%')
+							+td(['Квартира', '№54'], '67%')
+						ul
+							+td(['Этаж', '№4'], '67%')
+							+td(['Квартира', '№31'], '67%')
+							+td(['Квартира', '№32'], '67%')
+							+td(['Квартира', '№33'], '67%')
+							+td(['Квартира', '№34'], '67%')
+							+td(['Квартира', '№35'], '67%')
+							+td(['Квартира', '№36'], '67%')
+							+td(['Квартира', '№37'], '67%')
+							+td(['Квартира', '№38'], '67%')
+							+td(['Квартира', '№39'], '67%')
+							+td(['Квартира', '№40'], '67%')
+							+td(['Квартира', '№41'], '67%')
+							+td(['Квартира', '№42'], '67%')
+						ul
+							+td(['Этаж', '№3'], '29%')
+							+td(['Квартира', '№19'], '67%')
+							+td(['Квартира', '№20'], '67%')
+							+td(['Квартира', '№21'], '67%')
+							+td(['Квартира', '№22'], '67%')
+							+td(['Квартира', '№23'], '67%')
+							+td(['Квартира', '№24'], '67%')
+							+td(['Квартира', '№25'], '67%')
+							+td(['Квартира', '№26'], '67%')
+							+td(['Квартира', '№27'], '67%')
+							+td(['Квартира', '№28'], '67%')
+							+td(['Квартира', '№29'], '67%')
+							+td(['Квартира', '№30'], '67%')
+						ul
+							+td(['Этаж', '№2'], '67%')
+							+td(['Квартира', '№7'], '67%')
+							+td(['Квартира', '№8'], '67%')
+							+td(['Квартира', '№9'], '67%')
+							+td(['Квартира', '№10'], '67%')
+							+td(['Квартира', '№11'], '67%')
+							+td(['Квартира', '№12'], '67%')
+							+td(['Квартира', '№13'], '67%')
+							+td(['Квартира', '№14'], '67%')
+							+td(['Квартира', '№15'], '67%')
+							+td(['Квартира', '№16'], '67%')
+							+td(['Квартира', '№17'], '67%')
+							+td(['Квартира', '№18'], '67%')
+						ul
+							+td(['Этаж', '№1'], '15%')
+							+td(['Квартира', '№1'], '67%', 2)
+							+td(['Квартира', '№2'], '67%', 2)
+							+td(['Квартира', '№3'], '67%', 2)
+							+td(['Квартира', '№4'], '67%', 2)
+							+td(['Квартира', '№5'], '67%', 2)
+							+td(['Квартира', '№6'], '67%', 2)
 	//- +bottomControlBar()
