--- a/sourse/pug/pages/05-create-user.pug
+++ b/sourse/pug/pages/05-create-user.pug
@@ -13,7 +13,7 @@ block variables
 	- let  createObject = true
 
 block title
-	- let  title= 'Редактирование бригады'
+	- let  title= 'Создание пользователя'
 	title= title
 block pagecontent
 	//- +mob-mnu()
@@ -21,7 +21,7 @@ block pagecontent
 		+sCreateObject({
 			uploadPhoto: true
 		})
-			h2 Редактирование пользователя
+			h2 Создание пользователя
 			+b.form-wrap
 				+e.row.row
 					.col-12
