--- a/sourse/pug/blocks/sMainInfo/_sMainInfo.scss
+++ b/sourse/pug/blocks/sMainInfo/_sMainInfo.scss
@@ -59,7 +59,7 @@
       max-width: calc(rem(288) + var(--bs-gutter-x));
     }
   }
-  &__table-wrap {
+  &__table-wrap-inner {
     overflow-x: auto;
     overflow-y: hidden;
   }
@@ -68,47 +68,83 @@
     @include media-breakpoint-up(md) {
       padding: 0 rem(48) rem(48);
     }
-    table {
-      width: 100%;
-      @include media-breakpoint-up(md) {
-        tr:first-child td:first-child .sMainInfo__cell {
-          border-radius: rem(12) 0 0 0;
-        }
-        tr:first-child td:last-child .sMainInfo__cell {
-          border-radius: 0 rem(12) 0 0;
-        }
-        tr:last-child td:first-child .sMainInfo__cell {
-          border-radius: 0 0 0 rem(12);
-        }
-        tr:last-child td:last-child .sMainInfo__cell {
-          border-radius: 0 0 rem(12) 0;
-        }
-      }
-      tr {
-        &:first-child {
-          td {
-            .sMainInfo__cell {
-              border-top: 1px solid $gray-200;
-            }
-          }
-        }
-      }
-      td {
+    // table {
+    //   width: 100%;
+    //   @include media-breakpoint-up(md) {
+    //     tr:first-child td:first-child .sMainInfo__cell {
+    //       border-radius: rem(12) 0 0 0;
+    //     }
+    //     tr:first-child td:last-child .sMainInfo__cell {
+    //       border-radius: 0 rem(12) 0 0;
+    //     }
+    //     tr:last-child td:first-child .sMainInfo__cell {
+    //       border-radius: 0 0 0 rem(12);
+    //     }
+    //     tr:last-child td:last-child .sMainInfo__cell {
+    //       border-radius: 0 0 rem(12) 0;
+    //     }
+    //   }
+    //   tr {
+    //     &:first-child {
+    //       td {
+    //         .sMainInfo__cell {
+    //           border-top: 1px solid $gray-200;
+    //         }
+    //       }
+    //     }
+    //   }
+    //   td {
+    //     min-width: 88px;
+    //     width: 88px;
+    //     padding: 0;
+    //     height: 0;
+    //     &[colspan] {
+    //       .sMainInfo__cell p span {
+    //         @include media-breakpoint-up(md) {
+    //           display: inline;
+    //         }
+    //       }
+    //     }
+    //     @include media-breakpoint-up(md) {
+    //       width: calc(100% / 13);
+    //     }
+    //     &:first-child {
+    //       .sMainInfo__cell {
+    //         border-left: 1px solid $gray-200;
+    //         background-color: $gray-700;
+    //         border-bottom-color: $gray-600;
+    //         p {
+    //           font-size: 16px;
+    //           color: $gray-600;
+    //           line-height: 1.2;
+    //           @include media-breakpoint-up(md) {
+    //             font-size: rem(20);
+    //           }
+    //         }
+    //       }
+    //       .sMainInfo__precent {
+    //         color: $gray-600;
+    //       }
+    //     }
+    //   }
+    // }
+    ul {
+      display: flex;
+      margin-bottom: 0;
+      list-style-type: none;
+      // min-width: rem(1068);
+      // @include media-breakpoint-up(md) {
+      //   min-width: rem(1320);
+      // }
+      li {
+        flex-grow: 1;
         min-width: 88px;
-        width: 88px;
-        padding: 0;
-        height: 0;
-        &[colspan] {
-          .sMainInfo__cell p span {
-            @include media-breakpoint-up(md) {
-              display: inline;
-            }
-          }
-        }
         @include media-breakpoint-up(md) {
-          width: calc(100% / 13);
+          min-width: rem(101.5);
         }
         &:first-child {
+          // width: rem(101.5);
+          flex: 0 0 auto;
           .sMainInfo__cell {
             border-left: 1px solid $gray-200;
             background-color: $gray-700;
@@ -125,6 +161,58 @@
           .sMainInfo__precent {
             color: $gray-600;
           }
+          &:hover {
+            .sMainInfo__cell {
+              &:hover {
+                background-color: $gray-800 !important;
+                p {
+                  color: #fff !important;
+                }
+                .sMainInfo__precent {
+                  color: $accent !important;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .row {
+      --bs-gutter-x: 0;
+      --bs-gutter-y: 0;
+      .col {
+        &:first-child {
+          // width: rem(101.5);
+          // flex: 0 0 auto;
+          .sMainInfo__cell {
+            border-left: 1px solid $gray-200;
+            background-color: $gray-700;
+            border-bottom-color: $gray-600;
+            p {
+              font-size: 16px;
+              color: $gray-600;
+              line-height: 1.2;
+              @include media-breakpoint-up(md) {
+                font-size: rem(20);
+              }
+            }
+          }
+          .sMainInfo__precent {
+            color: $gray-600;
+          }
+          &:hover {
+            .sMainInfo__cell {
+              &:hover {
+                background-color: $gray-800 !important;
+                p {
+                  color: #fff !important;
+                }
+                .sMainInfo__precent {
+                  color: $accent !important;
+                }
+              }
+            }
+          }
         }
       }
     }
@@ -137,10 +225,12 @@
     border-right: 1px solid $gray-200;
     border-bottom: 1px solid $gray-200;
     height: 100%;
+    color: #000;
     @include media-breakpoint-up(md) {
       padding: rem(12);
     }
     p {
+      @include mt;
       font-size: 14px;
       line-height: 1.25;
       margin-bottom: 6px;
@@ -152,13 +242,6 @@
         display: block;
       }
     }
-    &.accent {
-      border: none !important;
-      background-color: $accent;
-      .sMainInfo__precent {
-        color: #000;
-      }
-    }
     &.done {
       background-color: rgba(70, 124, 244, 0.36);
     }
@@ -168,17 +251,16 @@
         color: $danger;
       }
     }
-    &.focus {
-      background-color: $gray-800 !important;
-      p {
-        color: #fff !important;
-      }
+    &:hover {
+      border-color: $accent;
+      background-color: $accent;
       .sMainInfo__precent {
-        color: $accent !important;
+        color: #000;
       }
     }
   }
   &__precent {
+    @include mt;
     margin-top: auto;
     line-height: 1.25;
     font-size: 14px;
