--- a/sourse/pug/blocks/sMainInfo/_sMainInfo.scss
+++ b/sourse/pug/blocks/sMainInfo/_sMainInfo.scss
@@ -68,47 +68,113 @@
     @include media-breakpoint-up(md) {
       padding: 0 rem(48) rem(48);
     }
-    // table {
-    //   width: 100%;
+    table {
+      width: 100%;
+      @include media-breakpoint-up(md) {
+        tr:first-child td:first-child .sMainInfo__cell {
+          border-radius: rem(12) 0 0 0;
+        }
+        tr:first-child td:last-child .sMainInfo__cell {
+          border-radius: 0 rem(12) 0 0;
+        }
+        tr:last-child td:first-child .sMainInfo__cell {
+          border-radius: 0 0 0 rem(12);
+        }
+        tr:last-child td:last-child .sMainInfo__cell {
+          border-radius: 0 0 rem(12) 0;
+        }
+      }
+      tr {
+        &:first-child {
+          td {
+            .sMainInfo__cell {
+              border-top: 1px solid $gray-200;
+            }
+          }
+        }
+      }
+      td {
+        min-width: 88px;
+        width: 88px;
+        padding: 0;
+        height: 0;
+        &[colspan] {
+          .sMainInfo__cell p span {
+            @include media-breakpoint-up(md) {
+              display: inline;
+            }
+          }
+        }
+        @include media-breakpoint-up(md) {
+          width: calc(100% / 13);
+        }
+        &:first-child {
+          .sMainInfo__cell {
+            border-left: 1px solid $gray-200;
+            background-color: $gray-700;
+            border-bottom-color: $gray-600;
+            p {
+              font-size: 16px;
+              color: $gray-600;
+              line-height: 1.2;
+              @include media-breakpoint-up(md) {
+                font-size: rem(20);
+              }
+            }
+            &:hover {
+              background-color: $gray-800 !important;
+              p {
+                color: #fff !important;
+              }
+              .sMainInfo__precent {
+                color: $accent !important;
+              }
+            }
+          }
+          .sMainInfo__precent {
+            color: $gray-600;
+          }
+        }
+      }
+    }
+    // ul {
+    //   display: flex;
+    //   margin-bottom: 0;
+    //   list-style-type: none;
+    //   // min-width: rem(1068);
+    //   // @include media-breakpoint-up(md) {
+    //   //   min-width: rem(1320);
+    //   // }
     //   @include media-breakpoint-up(md) {
-    //     tr:first-child td:first-child .sMainInfo__cell {
+    //     &:first-child li:first-child .sMainInfo__cell {
     //       border-radius: rem(12) 0 0 0;
     //     }
-    //     tr:first-child td:last-child .sMainInfo__cell {
+    //     &:first-child li:last-child .sMainInfo__cell {
     //       border-radius: 0 rem(12) 0 0;
     //     }
-    //     tr:last-child td:first-child .sMainInfo__cell {
+    //     &:last-child li:first-child .sMainInfo__cell {
     //       border-radius: 0 0 0 rem(12);
     //     }
-    //     tr:last-child td:last-child .sMainInfo__cell {
+    //     &:last-child li:last-child .sMainInfo__cell {
     //       border-radius: 0 0 rem(12) 0;
     //     }
     //   }
-    //   tr {
-    //     &:first-child {
-    //       td {
-    //         .sMainInfo__cell {
-    //           border-top: 1px solid $gray-200;
-    //         }
+    //   &:first-child {
+    //     li {
+    //       .sMainInfo__cell {
+    //         border-top: 1px solid $gray-200;
     //       }
     //     }
     //   }
-    //   td {
+    //   li {
+    //     flex-grow: 1;
     //     min-width: 88px;
-    //     width: 88px;
-    //     padding: 0;
-    //     height: 0;
-    //     &[colspan] {
-    //       .sMainInfo__cell p span {
-    //         @include media-breakpoint-up(md) {
-    //           display: inline;
-    //         }
-    //       }
-    //     }
     //     @include media-breakpoint-up(md) {
-    //       width: calc(100% / 13);
+    //       min-width: rem(101.5);
     //     }
     //     &:first-child {
+    //       // width: rem(101.5);
+    //       flex: 0 0 auto;
     //       .sMainInfo__cell {
     //         border-left: 1px solid $gray-200;
     //         background-color: $gray-700;
@@ -125,97 +191,61 @@
     //       .sMainInfo__precent {
     //         color: $gray-600;
     //       }
+    //       &:hover {
+    //         .sMainInfo__cell {
+    //           &:hover {
+    //             background-color: $gray-800 !important;
+    //             p {
+    //               color: #fff !important;
+    //             }
+    //             .sMainInfo__precent {
+    //               color: $accent !important;
+    //             }
+    //           }
+    //         }
+    //       }
     //     }
     //   }
     // }
-    ul {
-      display: flex;
-      margin-bottom: 0;
-      list-style-type: none;
-      // min-width: rem(1068);
-      // @include media-breakpoint-up(md) {
-      //   min-width: rem(1320);
-      // }
-      li {
-        flex-grow: 1;
-        min-width: 88px;
-        @include media-breakpoint-up(md) {
-          min-width: rem(101.5);
-        }
-        &:first-child {
-          // width: rem(101.5);
-          flex: 0 0 auto;
-          .sMainInfo__cell {
-            border-left: 1px solid $gray-200;
-            background-color: $gray-700;
-            border-bottom-color: $gray-600;
-            p {
-              font-size: 16px;
-              color: $gray-600;
-              line-height: 1.2;
-              @include media-breakpoint-up(md) {
-                font-size: rem(20);
-              }
-            }
-          }
-          .sMainInfo__precent {
-            color: $gray-600;
-          }
-          &:hover {
-            .sMainInfo__cell {
-              &:hover {
-                background-color: $gray-800 !important;
-                p {
-                  color: #fff !important;
-                }
-                .sMainInfo__precent {
-                  color: $accent !important;
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-    .row {
-      --bs-gutter-x: 0;
-      --bs-gutter-y: 0;
-      .col {
-        &:first-child {
-          // width: rem(101.5);
-          // flex: 0 0 auto;
-          .sMainInfo__cell {
-            border-left: 1px solid $gray-200;
-            background-color: $gray-700;
-            border-bottom-color: $gray-600;
-            p {
-              font-size: 16px;
-              color: $gray-600;
-              line-height: 1.2;
-              @include media-breakpoint-up(md) {
-                font-size: rem(20);
-              }
-            }
-          }
-          .sMainInfo__precent {
-            color: $gray-600;
-          }
-          &:hover {
-            .sMainInfo__cell {
-              &:hover {
-                background-color: $gray-800 !important;
-                p {
-                  color: #fff !important;
-                }
-                .sMainInfo__precent {
-                  color: $accent !important;
-                }
-              }
-            }
-          }
-        }
-      }
-    }
+    // .row {
+    //   --bs-gutter-x: 0;
+    //   --bs-gutter-y: 0;
+    //   .col {
+    //     &:first-child {
+    //       // width: rem(101.5);
+    //       // flex: 0 0 auto;
+    //       .sMainInfo__cell {
+    //         border-left: 1px solid $gray-200;
+    //         background-color: $gray-700;
+    //         border-bottom-color: $gray-600;
+    //         p {
+    //           font-size: 16px;
+    //           color: $gray-600;
+    //           line-height: 1.2;
+    //           @include media-breakpoint-up(md) {
+    //             font-size: rem(20);
+    //           }
+    //         }
+    //       }
+    //       .sMainInfo__precent {
+    //         color: $gray-600;
+    //       }
+    //       &:hover {
+    //         .sMainInfo__cell {
+    //           &:hover {
+    //             background-color: $gray-800 !important;
+    //             p {
+    //               color: #fff !important;
+    //             }
+    //             .sMainInfo__precent {
+    //               color: $accent !important;
+    //             }
+    //           }
+    //         }
+    //       }
+    //     }
+    //   }
+    // }
   }
   &__cell {
     display: flex;
